# critterbits

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  assets.pak
3pp/cpptoml/: SOURCE
3pp/duktape/: CMakeLists.txt  SOURCE  duk_config.h  duktape.h
3pp/libyaml_win32/: SOURCE
3pp/libyaml_win32/lib/win32_x64/: yaml.lib
3pp/libyaml_win32/lib/win32_x86/: yaml.lib
3pp/tinyxml2-4.0.1/: LICENSE  SOURCE
3pp/tinyxml2-4.0.1/lib/win32_x64/: tinyxml2.lib
3pp/tinyxml2-4.0.1/lib/win32_x86/: tinyxml2.lib
3pp/tmx/: README  tmx.h
3pp/tmxparser/: 0001-Add-offset-support-to-layer-objects.patch  SOURCE
3pp/tmxparser/include/: TmxLayer.h
3pp/tmxparser/lib/win32_x64/: tmxparser.lib
3pp/tmxparser/lib/win32_x86/: tmxparser.lib
3pp/zstd/: SOURCE
3pp/zstd/lib/win32_x64/: zstdlib_x64.lib
3pp/zstd/lib/win32_x86/: zstdlib_x86.lib
cmake/: FindLibXML2_win.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindTINYXML2.cmake  FindTMXPARSER.cmake  FindYAML.cmake  FindZSTD.cmake
docs/: index.md
docs/building/: index.md
docs/config/: index.md  scenes.md  sprites.md
docs/scripting/: entities.md  globals.md  index.md  sprites.md  viewport.md
example/: cbconfig.toml
example/scenes/: startup.toml
example/scenes/maps/: test_map.tmx
example/sprites/: elk.toml  player.toml
example/sprites/scripts/: elk.js  player.js
include/: cb2d.h  cb2d.hpp  cbanim.hpp  cbcoord.h  cbcoord.hpp  cbengine.h  cbengine.hpp  cbentity.h  cbentity.hpp  cbfiles.h  cbfiles.hpp  cbinput.h  cbinput.hpp  cblogging.h  cblogging.hpp  cbmath.h  cbmath.hpp  cbscene.h  cbscene.hpp  cbscripting.h  cbsdl.h  cbsdl.hpp  cbsprite.h  cbsprite.hpp  cbtilemap.h  cbtilemap.hpp  cbtoml.h  cbtoml.hpp  cbviewport.h  cbviewport.hpp  cbyaml.h  cleanup.h  critterbits.h  critterbits.hpp  errors.h  respath.h
include/cb/: 2d.hpp  anim.hpp  assetpack.hpp  boxcollider.hpp  color.hpp  coord.hpp  critterbits.hpp  engine.hpp  entity.hpp  gui.hpp  input.hpp  math.hpp  resource.hpp  scene.hpp  sdl.hpp  sprite.hpp  tilemap.hpp  toml.hpp  viewport.hpp
include/cb/scripting/: scripting.hpp  scriptsupport.hpp
include/memory/: nadeau.hpp
include/scripting/: cbscripting.h  cbscripting.hpp  cbscriptsupport.hpp
src/: CMakeLists.txt  animation.cpp  assetpackresourceloader.cpp  boxcollider.cpp  engine.cpp  engineconfiguration.cpp  enginecounters.cpp  engineeventqueue.cpp  entity.cpp  fileresourceloader.cpp  files.cpp  flexrect.cpp  fontmanager.cpp  guimanager.cpp  guipanel.cpp  inputmanager.cpp  main.cpp  memory.cpp  rectregioncombiner.cpp  rendering.cpp  resourceloader.cpp  scene.cpp  scenemanager.cpp  script.cpp  scriptengine.cpp  scriptsupport.cpp  sprite.cpp  spritemanager.cpp  texturemanager.cpp  tilemap.cpp  tilemapregion.cpp  tilesetimagemanager.cpp  tomlparser.cpp  viewport.cpp  yaml.cpp
src/anim/: CMakeLists.txt  animation.cpp  keyframeanimation.cpp  transformanimation.cpp  translateanimation.cpp
src/gui/: CMakeLists.txt  gridlayout.cpp  guicontrol.cpp  guiimage.cpp  guilabel.cpp  guimanager.cpp  guipanel.cpp  ninesliceimage.cpp
src/toml/: CMakeLists.txt  tomlparser.cpp
src/tools/assetpacker/: CMakeLists.txt  main.cpp
